# MacroWeaver

./: .gitignore  Makefile  README.md  package-lock.json  package.json
docs/: research-digest.md
engine/: .env.example  pyproject.toml
engine/macroweaver/: __main__.py
engine/macroweaver/agent/: memory.py  pipeline.py  reflection.py
engine/macroweaver/cli/: __main__.py
engine/macroweaver/kernel/: config.py  events.py  recorder.py  replay.py  runner.py  scheduler.py  sinks.py
engine/macroweaver/market/: __init__.py  base.py  clob.py  econagent.py  fish_calvano.py  loader.py
engine/macroweaver/metrics/: __init__.py  base.py  clob.py  econ.py  fish.py
engine/macroweaver/policy/: base.py  claude_policy.py  deterministic.py  factory.py  replay.py
engine/tests/: test_agents_explicit.py  test_golden_econagent.py  test_golden_fish.py  test_market_contract.py  test_markets.py
presets/: clob_twinmarket.yaml  econagent_macro.yaml  fish_calvano.yaml  fish_calvano_monopoly.yaml
server/: package.json
server/src/: config.js  files.js  index.js  routes.js  runManager.js
shared/: config.schema.json
traces/golden/: clob_twinmarket.trace.json  econagent_macro.trace.json  fish_calvano.trace.json
web/: index.html  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  main.tsx  store.ts  theme.css  types.ts
web/src/console/: PresetPicker.tsx  SetupSidebar.tsx  marketFields.ts
web/src/lib/: chart.ts  defaults.ts
web/src/replay/: AgentQA.tsx  FlowStrip.tsx  NewRun.tsx  PriceChart.tsx  RunBar.tsx  ThinkingCards.tsx  Transport.tsx
(+12 files in other folders)
